<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.UserRegistrationActivity">
    <RelativeLayout
        android:id="@+id/title_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:padding="@dimen/space16"
            android:src="@drawable/ic_back_button"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:textSize="@dimen/space16"
            />
        <com.waycool.uicomponents.Text.Title1Bold
            android:id="@+id/farmer_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/black_two"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:textSize="@dimen/txt16" />
    </RelativeLayout>
    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="@dimen/space4"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:layout_below="@+id/title_parent"
        android:background="@color/profile_yellow"/>
    <ScrollView
        android:layout_below="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.waycool.uicomponents.Text.Title1Bold
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space10"
                android:text="@string/text1"
                android:layout_marginLeft="@dimen/space16"
                android:textColor="@color/black_two"
                android:textSize="@dimen/txt20" />
            <com.waycool.uicomponents.Text.ParagraphMedium
                android:id="@+id/farmer_det_msg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:gravity="center_vertical"
                android:textColor="@color/black_one"
                android:layout_marginLeft="@dimen/space16"

                android:layout_marginTop="@dimen/space5"/>
            <com.waycool.uicomponents.Text.ParagraphMedium
                android:id="@+id/farmer_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space10"
                android:text="@string/name_text"
                android:layout_marginLeft="@dimen/space16"
                android:textColor="@color/black"
                 />
            <RelativeLayout
                android:id="@+id/farmer_name_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginRight="@dimen/space16"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space48"
                    android:layout_centerInParent="true"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black_two"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/txt14"
                    android:theme="@style/EditTextTheme" />

                <ImageButton
                    android:id="@+id/getFarmerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:padding="@dimen/space10"
                    android:src="@drawable/ic_mic" />
            </RelativeLayout>
            <com.waycool.uicomponents.Text.ParagraphMedium
                android:id="@+id/farmer_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space10"
                android:text="@string/location_text"
                android:layout_marginLeft="@dimen/space16"
                android:textColor="@color/black"
                 />
            <RelativeLayout
                android:id="@+id/farmer_location_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginRight="@dimen/space16"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_location_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space48"
                    android:layout_centerInParent="true"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black_two"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/txt14"
                    android:theme="@style/EditTextTheme" />

                <ImageButton
                    android:id="@+id/getFarmerLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:enabled="false"
                    android:padding="@dimen/space10"
                    android:src="@drawable/ic_location_disable" />

            </RelativeLayout>
            <com.waycool.uicomponents.Text.Title2Bold
                android:id="@+id/know_services_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space10"
                android:text="@string/text3"
                android:layout_marginLeft="@dimen/space16"
                android:textColor="@color/black_two"
               />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/know_services_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space16"/>
            <com.waycool.uicomponents.Text.Title2Bold
                android:id="@+id/premium_features_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space10"
                android:text="@string/text4"
                android:layout_marginLeft="@dimen/space16"
                android:textColor="@color/black_two"
                 />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/premium_features_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space16"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_done_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space45"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/space16"
                android:layout_marginTop="@dimen/space16"
                android:layout_marginEnd="@dimen/space16"
                android:layout_marginBottom="@dimen/space16"
                android:background="@drawable/bg_green_rect"
                android:backgroundTint="@drawable/selector_button_states_change"
                android:enabled="true"
                android:text="@string/btn"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txt16" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" />
</RelativeLayout>